# backend-test

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/core/: security.py  settings.py
app/db/: base.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2b78232fd56f_initial_migrations.py  716b250301a8_create_user_user_and_others.py  739bcf63cf13_create_user_tables.py  c5d0c3c2215d_create_user_user_table.py  e24aaa463422_create_user_tables.py
app/middlewares/: logging.py
app/modules/users/application/: user_service.py
app/modules/users/domain/: user.py
app/modules/users/infrastructure/: models.py  repository.py  routers.py
app/modules/users/interfaces/: schemas.py  user_repository.py
app/shared/: model_base.py
